--- a/Css/style.css
+++ b/Css/style.css
@@ -21,9 +21,9 @@ main{
 .carousel-control-next, .carousel-control-prev{
     width: 5% !important;
 }
-
-@media only screen and (min-width:325px) and (max-width:768px){
-    .img{
-        width: 4vw;
-    }
-}   
+.img{
+    max-width: 20% !important;
+}
+.h-100{
+    height: 88% !important;
+}
